--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
         "webpack-cli": "^4.9.1"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "@fortawesome/fontawesome-svg-core": "^6.5.1",
+        "@fortawesome/free-brands-svg-icons": "^6.5.1",
+        "@fortawesome/free-regular-svg-icons": "^6.5.1",
+        "@fortawesome/free-solid-svg-icons": "^6.5.1",
+        "@fortawesome/vue-fontawesome": "^3.0.5",
         "vue": "^3.2.37",
-        "vue-router": "^4.0.12"
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
     }
 }
