--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
+DB_ENGINE=InnoDB
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,6 +28,7 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
