--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "@fortawesome/free-regular-svg-icons": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/vue-fontawesome": "^3.0.5",
+        "echarts": "^5.5.0",
         "vue": "^3.2.37",
+        "vue-echarts": "^6.6.9",
         "vue-router": "^4.0.12",
         "vuex": "^4.0.2"
     }
